--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "koatty_config": "~1.2.0",
     "koatty_container": "~1.9.4",
     "koatty_core": "~1.11.0",
+    "koatty_exception": "~1.5.3",
     "koatty_lib": "~1.4.0",
     "koatty_loader": "~1.1.0",
     "koatty_logger": "~2.1.8",
