feat: Add Swagger documentation middleware

--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "husky": "^4.x.x",
     "jest": "^29.x.x",
     "jest-html-reporters": "^3.x.x",
+    "koa2-swagger-ui": "^5.11.0",
     "koatty_exception": "~1.5.3",
     "koatty_validation": "~1.x.x",
     "reflect-metadata": "^0.x.x",
@@ -85,6 +86,8 @@
     "rollup-plugin-typescript2": "^0.x.x",
     "standard-version": "^9.x.x",
     "supertest": "^7.0.0",
+    "swagger2": "^4.0.3",
+    "swagger2-koa": "^4.0.0",
     "ts-jest": "^29.x.x",
     "ts-node": "^10.x.x",
     "tslib": "^2.x.x",
