--- a/package.json
+++ b/package.json
@@ -57,11 +57,13 @@
     "@grpc/grpc-js": "^1.12.2",
     "@microsoft/api-documenter": "^7.x.x",
     "@microsoft/api-extractor": "^7.x.x",
+    "@nestjs/swagger": "^11.0.3",
     "@rollup/plugin-commonjs": "^28.x.x",
     "@rollup/plugin-json": "^6.x.x",
     "@rollup/plugin-node-resolve": "^15.x.x",
     "@types/formidable": "^3.x.x",
     "@types/jest": "^29.x.x",
+    "@types/json5": "^2.2.0",
     "@types/koa": "^2.x.x",
     "@types/koa-compose": "^3.x.x",
     "@types/lodash": "^4.x.x",
@@ -77,6 +79,7 @@
     "husky": "^4.x.x",
     "jest": "^29.x.x",
     "jest-html-reporters": "^3.x.x",
+    "json5": "^2.2.3",
     "koa2-swagger-ui": "^5.11.0",
     "koatty_exception": "~1.5.3",
     "koatty_validation": "~1.x.x",
@@ -97,7 +100,7 @@
     "koa": "~2.15.3",
     "koatty_config": "~1.2.0",
     "koatty_container": "~1.9.4",
-    "koatty_core": "~1.11.5",
+    "koatty_core": "~1.11.6",
     "koatty_exception": "~1.5.3",
     "koatty_lib": "~1.4.0",
     "koatty_loader": "~1.1.0",
