--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@rollup/plugin-commonjs": "^28.x.x",
     "@rollup/plugin-json": "^6.x.x",
     "@rollup/plugin-node-resolve": "^15.x.x",
+    "@rollup/plugin-terser": "^0.x.x",
     "@types/formidable": "^3.x.x",
     "@types/jest": "^29.x.x",
     "@types/koa": "^2.x.x",
@@ -98,9 +99,9 @@
     "koatty_lib": "~1.4.0",
     "koatty_loader": "~1.1.0",
     "koatty_logger": "~2.1.8",
-    "koatty_proto": "~1.2.0",
     "koatty_router": "~1.12.1",
     "koatty_serve": "~2.3.0",
-    "koatty_trace": "~1.13.1"
+    "koatty_trace": "~1.13.1",
+    "ts-morph": "^25.0.1"
   }
 }
