build: enable terser plugin with custom config and update koatty_core to ~1.15.0

--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "rollup": "^4.x.x",
     "rollup-plugin-cleanup": "^3.x.x",
     "rollup-plugin-delete": "^2.x.x",
+    "rollup-plugin-terser": "^7.x.x",
     "rollup-plugin-typescript2": "^0.x.x",
     "standard-version": "^9.x.x",
     "supertest": "^7.x.x",
@@ -95,7 +96,7 @@
     "koa": "~2.16.0",
     "koatty_config": "~1.2.0",
     "koatty_container": "~1.10.3",
-    "koatty_core": "~1.13.0",
+    "koatty_core": "~1.15.0",
     "koatty_exception": "~1.6.0",
     "koatty_lib": "~1.4.1",
     "koatty_loader": "~1.1.0",
