--- a/package.json
+++ b/package.json
@@ -91,16 +91,28 @@
   },
   "dependencies": {
     "koa": "~2.16.1",
-    "koatty_config": "~1.2.0",
-    "koatty_container": "~1.12.0",
-    "koatty_core": "~1.16.2",
-    "koatty_exception": "~1.6.0",
-    "koatty_lib": "~1.4.2",
-    "koatty_loader": "~1.1.0",
-    "koatty_logger": "~2.2.0",
-    "koatty_router": "~1.15.0",
-    "koatty_serve": "~2.4.0",
-    "koatty_trace": "~1.15.2",
-    "ts-morph": "^25.0.1"
+    "koatty_config": "~1.2.2",
+    "koatty_container": "~1.16.0",
+    "koatty_core": "~1.18.0",
+    "koatty_exception": "~1.8.0",
+    "koatty_lib": "~1.4.3",
+    "koatty_loader": "~1.3.0",
+    "koatty_logger": "~2.3.0",
+    "koatty_router": "~1.19.0",
+    "koatty_serve": "~2.8.0",
+    "koatty_trace": "~1.16.0",
+    "ts-morph": "^26.0.0"
+  },
+  "overrides": {
+    "**/koatty_config": "1.2.2",
+    "**/koatty_container": "1.16.0",
+    "**/koatty_core": "1.18.0",
+    "**/koatty_exception": "1.8.0",
+    "**/koatty_lib": "1.4.3",
+    "**/koatty_loader": "1.3.0",  
+    "**/koatty_logger": "2.3.0",  
+    "**/koatty_router": "1.19.0",
+    "**/koatty_serve": "2.8.0",
+    "**/koatty_trace": "1.16.0"
   }
 }
