--- a/package.json
+++ b/package.json
@@ -90,17 +90,29 @@
     "typescript": "^5.x.x"
   },
   "dependencies": {
-    "koa": "~2.16.2",
+    "koa": "~2.16.1",
     "koatty_config": "~1.2.2",
-    "koatty_container": "~1.17.0",
-    "koatty_core": "~1.19.0-6",
+    "koatty_container": "~1.16.0",
+    "koatty_core": "~1.18.0",
     "koatty_exception": "~1.8.0",
     "koatty_lib": "~1.4.3",
     "koatty_loader": "~1.3.0",
-    "koatty_logger": "~2.5.0",
-    "koatty_router": "1.20.0-8",
-    "koatty_serve": "~2.9.0-15",
+    "koatty_logger": "~2.3.0",
+    "koatty_router": "~1.19.0",
+    "koatty_serve": "~2.8.0",
     "koatty_trace": "~1.16.0",
-    "ts-morph": "^27.0.0"
+    "ts-morph": "^26.0.0"
+  },
+  "overrides": {
+    "**/koatty_config": "1.2.2",
+    "**/koatty_container": "1.16.0",
+    "**/koatty_core": "1.18.0",
+    "**/koatty_exception": "1.8.0",
+    "**/koatty_lib": "1.4.3",
+    "**/koatty_loader": "1.3.0",  
+    "**/koatty_logger": "2.3.0",  
+    "**/koatty_router": "1.19.0",
+    "**/koatty_serve": "2.8.0",
+    "**/koatty_trace": "1.16.0"
   }
 }
