--- a/demo/package.json
+++ b/demo/package.json
@@ -7,9 +7,5 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "@grpc/grpc-js": "^1.14.0",
-    "@grpc/proto-loader": "^0.8.0"
-  }
+  "description": ""
 }
