--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:doc": "npx api-documenter markdown --input temp --output docs/api",
     "build:dts": "npx tsc && npx api-extractor run --local --verbose",
     "eslint": "eslint --ext .ts,.js ./",
-    "prepublishOnly": "npm test && npm run build && git push --follow-tags origin",
+    "prepublishOnly": "echo 'Skipping prepublishOnly in monorepo'",
     "prerelease": "npm test && npm run build",
     "release": "standard-version",
     "release:pre": "npm run release -- --prerelease",
@@ -91,16 +91,16 @@
   },
   "dependencies": {
     "koa": "~2.16.2",
-    "koatty_config": "~1.2.2",
+    "koatty_config": "workspace:*",
     "koatty_container": "~1.17.0",
-    "koatty_core": "~1.19.0-6",
-    "koatty_exception": "~1.8.0",
+    "koatty_core": "workspace:*",
+    "koatty_exception": "workspace:*",
     "koatty_lib": "~1.4.3",
     "koatty_loader": "~1.3.0",
     "koatty_logger": "~2.5.0",
-    "koatty_router": "1.20.0-8",
-    "koatty_serve": "~2.9.0-15",
-    "koatty_trace": "~1.16.0",
+    "koatty_router": "workspace:*",
+    "koatty_serve": "workspace:*",
+    "koatty_trace": "workspace:*",
     "ts-morph": "^27.0.0"
   }
 }
