fix: resolve workspace dependencies in build process
Added a new build script "fixWorkspaceDeps" that resolves workspace:* dependencies to actual version numbers in the built package.json files. This ensures that when packages are published, they reference specific versions rather than workspace protocols, making them properly installable from the registry.

The script was added to multiple packages in the monorepo and integrated into the build process to run after other build steps complete.

--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "3.13.3",
   "description": "Koa2 + Typescript = koatty. Use Typescript's decorator implement auto injection.",
   "scripts": {
-    "build": "npm run build:js && npm run build:dts && npm run build:doc && npm run build:cp",
+    "build": "npm run build:js && npm run build:dts && npm run build:doc && npm run build:cp && npm run build:fix",
     "build:cp": "node scripts/postBuild && npx copyfiles package.json LICENSE README.md dist/",
+    "build:fix": "node scripts/fixWorkspaceDeps",
     "build:js": "npx rollup --bundleConfigAsCjs -c .rollup.config.js",
     "build:doc": "npx api-documenter markdown --input temp --output docs/api",
     "build:dts": "npx tsc && npx api-extractor run --local --verbose",
