--- a/packages/koatty-trace/package.json
+++ b/packages/koatty-trace/package.json
@@ -3,8 +3,9 @@
   "version": "1.16.0",
   "description": "Full link tracking and error interception for koatty.",
   "scripts": {
-    "build": "npm run build:js && npm run build:dts && npm run build:doc && npm run build:cp",
+    "build": "npm run build:js && npm run build:dts && npm run build:doc && npm run build:cp && npm run build:fix",
     "build:cp": "node scripts/postBuild && npx -y copyfiles package.json LICENSE README.md dist/",
+    "build:fix": "node scripts/fixWorkspaceDeps",
     "build:js": "npx -y rollup --bundleConfigAsCjs -c .rollup.config.js",
     "build:doc": "npx -y api-documenter markdown --input temp --output docs/api",
     "build:dts": "npx -y tsc && npx -y api-extractor run --local --verbose",
