docs(release): overhaul release guide and add automation script
- Restructure RELEASE-GUIDE.md with clearer sections and quick start guide
- Add comprehensive package listing and one-click release commands
- Introduce scripts/release.sh for automated package publishing
- Support for different release types (patch, minor, major, prerelease)
- Add options for dry-run, syncing to independent repos, and skipping npm
- Update toolchain description to include standard-version and Git subtree
- Improve release process documentation with detailed steps and examples

--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "clean": "turbo run clean && rm -rf node_modules .turbo",
     "changeset": "changeset",
     "version": "changeset version",
-    "release": "pnpm build && changeset publish"
+    "release": "pnpm build && changeset publish",
+    "pkg:release": "bash scripts/release.sh",
+    "pkg:release:minor": "bash scripts/release.sh",
+    "pkg:release:major": "bash scripts/release.sh",
+    "pkg:release:pre": "bash scripts/release.sh",
+    "pkg:sync": "bash scripts/sync-standalone.sh"
   },
   "keywords": [
     "koatty",
