--- a/packages/koatty-serve/package.json
+++ b/packages/koatty-serve/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koatty_serve",
-  "version": "2.9.0-15",
+  "version": "2.10.0-beta.1",
   "description": "Provide http1/2/3, websocket, gRPC server for Koatty.",
   "scripts": {
     "build": "npm run build:js && npm run build:dts && npm run build:doc && npm run build:cp && npm run build:fix",
@@ -37,7 +37,7 @@
     "thinkkoa"
   ],
   "engines": {
-    "node": ">10.0.0"
+    "node": ">=18.0.0"
   },
   "author": {
     "name": "richenlin",
