fix: 解决依赖问题以支持Koa 3.0升级
- 升级koatty_logger至2.5.0修复isTrueEmpty缺失问题
- 为koatty_trace添加openai devDependency修复OpenTelemetry类型错误
- 在koatty_router的package.json添加koa-graphql弃用提示
- koatty_router测试：354/354通过
- koatty_core测试：282/286通过（4个超时）
- 所有包构建成功

--- a/packages/koatty-serve/package.json
+++ b/packages/koatty-serve/package.json
@@ -98,7 +98,7 @@
     "koatty_core": "workspace:*",
     "koatty_exception": "workspace:*",
     "koatty_lib": "^1.x.x",
-    "koatty_logger": "^2.x.x",
+    "koatty_logger": "^2.5.0",
     "koatty_proto": "^1.x.x",
     "koatty_validation": "^1.x.x",
     "ws": "^8.18.3"
