--- a/packages/koatty-trace/package.json
+++ b/packages/koatty-trace/package.json
@@ -63,21 +63,16 @@
   "devDependencies": {
     "@commitlint/cli": "^19.x.x",
     "@commitlint/config-conventional": "^19.x.x",
-    "@grpc/grpc-js": "^1.x.x",
     "@microsoft/api-documenter": "^7.x.x",
     "@microsoft/api-extractor": "^7.x.x",
     "@rollup/plugin-commonjs": "^28.x.x",
     "@rollup/plugin-json": "^6.x.x",
-    "@rollup/plugin-node-resolve": "^15.x.x",
+    "@rollup/plugin-node-resolve": "^16.x.x",
     "@rollup/plugin-terser": "^0.x.x",
-    "@types/jest": "^29.5.11",
+    "@types/jest": "^29.x.x",
     "@types/koa": "^2.x.x",
-    "@types/koa-compose": "^3.x.x",
-    "@types/koa-compress": "^4.0.6",
     "@types/lodash": "^4.x.x",
-    "@types/node": "^22.13.16",
-    "@types/on-finished": "^2.x.x",
-    "@types/uuid": "^10.0.0",
+    "@types/node": "^20.x.x",
     "@types/ws": "^8.x.x",
     "@typescript-eslint/eslint-plugin": "^8.x.x",
     "@typescript-eslint/parser": "^8.x.x",
@@ -85,15 +80,18 @@
     "eslint": "^8.x.x",
     "eslint-plugin-jest": "^28.x.x",
     "husky": "^4.x.x",
-    "jest": "^29.7.0",
-    "jest-html-reporters": "^3.x.x",
-    "koa": "^2.16.0",
+    "jest": "^29.1.1",
+    "jest-html-reporters": "^3.1.7",
+    "koa": "^2.x.x",
+    "koatty_core": "workspace:*",
+    "koatty_exception": "workspace:*",
+    "openai": "^6.7.0",
     "reflect-metadata": "^0.x.x",
     "rollup": "^4.x.x",
     "rollup-plugin-delete": "^2.x.x",
     "rollup-plugin-typescript2": "^0.x.x",
-    "sinon": "^19.0.4",
-    "standard-version": "^9.x.x",
+    "standard-version": "^9.5.0",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.x.x",
     "tslib": "^2.8.1",
@@ -117,43 +115,7 @@
     "koa-compress": "^5.1.1",
     "koatty_container": "^1.x.x",
     "koatty_lib": "^1.x.x",
-    "koatty_logger": "^2.x.x"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^19.x.x",
-    "@commitlint/config-conventional": "^19.x.x",
-    "@microsoft/api-documenter": "^7.x.x",
-    "@microsoft/api-extractor": "^7.x.x",
-    "@rollup/plugin-commonjs": "^28.x.x",
-    "@rollup/plugin-json": "^6.x.x",
-    "@rollup/plugin-node-resolve": "^16.x.x",
-    "@rollup/plugin-terser": "^0.x.x",
-    "@types/jest": "^29.x.x",
-    "@types/koa": "^2.x.x",
-    "@types/lodash": "^4.x.x",
-    "@types/node": "^20.x.x",
-    "@types/ws": "^8.x.x",
-    "@typescript-eslint/eslint-plugin": "^8.x.x",
-    "@typescript-eslint/parser": "^8.x.x",
-    "conventional-changelog-cli": "^5.x.x",
-    "eslint": "^8.x.x",
-    "eslint-plugin-jest": "^28.x.x",
-    "husky": "^4.x.x",
-    "jest": "^29.1.1",
-    "jest-html-reporters": "^3.1.7",
-    "koa": "^2.x.x",
-    "koatty_core": "workspace:*",
-    "koatty_exception": "workspace:*",
-    "reflect-metadata": "^0.x.x",
-    "rollup": "^4.x.x",
-    "rollup-plugin-delete": "^2.x.x",
-    "rollup-plugin-typescript2": "^0.x.x",
-    "standard-version": "^9.5.0",
-    "supertest": "^7.0.0",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.x.x",
-    "tslib": "^2.8.1",
-    "typescript": "^5.x.x"
+    "koatty_logger": "^2.5.0"
   },
   "peerDependencies": {
     "koatty_container": "^1.x.x",
