--- a/packages/koatty-core/package.json
+++ b/packages/koatty-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koatty_core",
-  "version": "1.20.0-beta.1",
+  "version": "2.0.0",
   "description": "Koatty framework core",
   "scripts": {
     "build": "npm run build:js && npm run build:dts && npm run build:doc && npm run build:cp && npm run build:fix",
