--- a/packages/koatty-serve/package.json
+++ b/packages/koatty-serve/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koatty_serve",
-  "version": "2.10.0-beta.1",
+  "version": "3.0.0",
   "description": "Provide http1/2/3, websocket, gRPC server for Koatty.",
   "scripts": {
     "build": "npm run build:js && npm run build:dts && npm run build:doc && npm run build:cp && npm run build:fix",
@@ -98,7 +98,7 @@
     "koatty_core": "workspace:*",
     "koatty_exception": "workspace:*",
     "koatty_lib": "^1.x.x",
-    "koatty_logger": "^2.5.0",
+    "koatty_logger": "^2.x.x",
     "koatty_proto": "^1.x.x",
     "koatty_validation": "^1.x.x",
     "ws": "^8.18.3"
