feat(trace): enhance tracing with timeout handling and status checks
- Updated OpenTelemetry dependencies to latest versions
- Added timeout handling wrapper for request processing
- Implemented response status checking and normalization
- Added requestId field to extension options
- Optimized configuration by creating static config object
- Fixed span attributes to include context parameter

--- a/packages/koatty-trace/package.json
+++ b/packages/koatty-trace/package.json
@@ -106,16 +106,16 @@
     "@opentelemetry/instrumentation": "^0.207.0",
     "@opentelemetry/instrumentation-http": "^0.207.0",
     "@opentelemetry/instrumentation-koa": "^0.56.0",
-    "@opentelemetry/resources": "^2.0.0",
-    "@opentelemetry/sdk-metrics": "^2.0.0",
+    "@opentelemetry/resources": "^2.2.0",
+    "@opentelemetry/sdk-metrics": "^2.2.0",
     "@opentelemetry/sdk-node": "^0.207.0",
-    "@opentelemetry/sdk-trace-base": "^2.0.0",
-    "@opentelemetry/sdk-trace-node": "^2.0.0",
-    "@opentelemetry/semantic-conventions": "^1.30.0",
+    "@opentelemetry/sdk-trace-base": "^2.2.0",
+    "@opentelemetry/sdk-trace-node": "^2.2.0",
+    "@opentelemetry/semantic-conventions": "^1.37.0",
     "koa-compress": "^5.1.1",
     "koatty_container": "^1.x.x",
     "koatty_lib": "^1.x.x",
-    "koatty_logger": "^2.5.0"
+    "koatty_logger": "^2.x.x"
   },
   "peerDependencies": {
     "koatty_container": "^1.x.x",
