--- a/package.json
+++ b/package.json
@@ -91,17 +91,17 @@
     "typescript": "^5.x.x"
   },
   "dependencies": {
-    "koa": "^3.0.0",
+    "koa": "^3.0.3",
     "koatty_config": "workspace:*",
-    "koatty_container": "~1.17.0",
+    "koatty_container": "^1.17.0",
     "koatty_core": "workspace:*",
     "koatty_exception": "workspace:*",
-    "koatty_lib": "~1.4.3",
-    "koatty_loader": "~1.3.0",
-    "koatty_logger": "~2.5.0",
+    "koatty_lib": "^1.4.3",
+    "koatty_loader": "^1.3.0",
+    "koatty_logger": "2.8.1",
     "koatty_router": "workspace:*",
     "koatty_serve": "workspace:*",
     "koatty_trace": "workspace:*",
-    "ts-morph": "^27.0.0"
+    "ts-morph": "^27.0.2"
   }
 }
