feat: enhance config decorator and update dependencies
- Add support for symbol property keys in Config decorator
- Update koatty_logger dependency to use ^2.x.x for better compatibility
- Change const enums to regular enums for better compatibility
- Suppress TypeScript 5.x deprecation warnings
- Improve error logging for EADDRINUSE errors
- Reorganize example files structure

--- a/packages/koatty-config/package.json
+++ b/packages/koatty-config/package.json
@@ -67,7 +67,7 @@
     "koatty_core": "workspace:*",
     "koatty_lib": "^1.x.x",
     "koatty_loader": "^1.x.x",
-    "koatty_logger": "^2.5.0",
+    "koatty_logger": "^2.x.x",
     "run-con": "^1.3.2"
   },
   "peerDependencies": {
