--- a/packages/koatty-router/package.json
+++ b/packages/koatty-router/package.json
@@ -84,22 +84,22 @@
   "dependencies": {
     "@koa/router": "^14.0.0",
     "fast-querystring": "^1.1.2",
-    "fast-xml-parser": "^5.2.3",
+    "fast-xml-parser": "^5.3.0",
     "formidable": "^3.5.4",
-    "graphql-http": "^1.22.0",
+    "graphql-http": "^1.22.4",
     "inflation": "^2.1.0",
     "koa-compose": "^4.1.0",
     "koatty_container": "^1.x.x",
     "koatty_core": "workspace:*",
     "koatty_exception": "workspace:*",
     "koatty_graphql": "^1.x.x",
-    "koatty_lib": "^1.4.3",
-    "koatty_logger": "^2.5.0",
+    "koatty_lib": "^1.x.x",
+    "koatty_logger": "^2.x.x",
     "koatty_proto": "^1.x.x",
-    "koatty_validation": "^1.6.1",
-    "lru-cache": "^11.1.0",
+    "koatty_validation": "^1.x.x",
+    "lru-cache": "^11.2.2",
     "on-finished": "^2.4.1",
-    "raw-body": "^3.0.0"
+    "raw-body": "^3.0.1"
   },
   "peerDependencies": {
     "koatty_container": "^1.x.x",
