--- a/packages/koatty-config/tsconfig.json
+++ b/packages/koatty-config/tsconfig.json
@@ -3,6 +3,7 @@
     /* Basic Options */
     "target": "ES2022" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', or 'ESNEXT'. */,
     "module": "commonjs" /* Specify module code generation: 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
+    "ignoreDeprecations": "5.0" /* Suppress deprecation warnings for TypeScript 5.x */,
     "lib": [
       "ES2022"
     ]
