--- a/packages/koatty-core/package.json
+++ b/packages/koatty-core/package.json
@@ -79,7 +79,7 @@
     "koatty_container": "^1.x.x",
     "koatty_exception": "workspace:*",
     "koatty_lib": "^1.x.x",
-    "koatty_logger": "^2.5.0",
+    "koatty_logger": "^2.x.x",
     "on-finished": "^2.4.1"
   },
   "peerDependencies": {
