--- a/packages/koatty-exception/tsconfig.json
+++ b/packages/koatty-exception/tsconfig.json
@@ -3,15 +3,13 @@
     /* Basic Options */
     "target": "ES2019" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', or 'ESNEXT'. */,
     "module": "CommonJS" /* Specify module code generation: 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
-    "lib": [
-      "ES2019"
-    ]
-    /* Specify library files to be included in the compilation:  */ ,
-    // "allowJs": true /* Allow javascript files to be compiled. */,
+    "ignoreDeprecations": "5.0" /* Suppress deprecation warnings for TypeScript 5.x */,
+    "lib": ["ES2019"],
+    /* Specify library files to be included in the compilation:  */ // "allowJs": true /* Allow javascript files to be compiled. */,
     // "checkJs": true,                       /* Report errors in .js files. */
     // "jsx": "preserve",                     /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
     "declaration": true /* Generates corresponding '.d.ts' file. */,
-    "declarationMap": true, /* Generates a sourcemap for each corresponding '.d.ts' file. */
+    "declarationMap": true /* Generates a sourcemap for each corresponding '.d.ts' file. */,
     "sourceMap": true /* Generates corresponding '.map' file. */,
     // "outFile": "./",                       /* Concatenate and emit output to single file. */
     "outDir": "./temp" /* Redirect output structure to the directory. */,
@@ -24,12 +22,12 @@
     "downlevelIteration": true /* Provide full support for iterables in 'for-of', spread, and destructuring when targeting 'ES5' or 'ES3'. */,
     // "isolatedModules": true,               /* Transpile each file as a separate module (similar to 'ts.transpileModule'). */
     /* Strict Type-Checking Options */
-    "stripInternal": true, /* Enable all strict type-checking options. */
+    "stripInternal": true /* Enable all strict type-checking options. */,
     "noImplicitAny": true /* Raise error on expressions and declarations with an implied 'any' type. */,
     // "strictNullChecks": true,              /* Enable strict null checks. */
     "noImplicitThis": false /* Raise error on 'this' expressions with an implied 'any' type. */,
     // "alwaysStrict": true,                  /* Parse in strict mode and emit "use strict" for each source file. */
-    "pretty": true, /* pretty source file. */
+    "pretty": true /* pretty source file. */,
     /* Additional Checks */
     // "noUnusedLocals": true, /* Report errors on unused locals. */
     // "noUnusedParameters": true,            /* Report errors on unused parameters. */
@@ -51,7 +49,7 @@
     "allowSyntheticDefaultImports": true /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */,
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "useUnknownInCatchVariables": false, /* Default catch clause variables as unknown instead of any. */
+    "useUnknownInCatchVariables": false /* Default catch clause variables as unknown instead of any. */,
     /* Source Map Options */
     // "sourceRoot": "./",                    /* Specify the location where debugger should locate TypeScript files instead of source locations. */
     // "mapRoot": "./",                       /* Specify the location where debugger should locate map files instead of generated locations. */
