--- a/packages/koatty-trace/tsconfig.json
+++ b/packages/koatty-trace/tsconfig.json
@@ -3,6 +3,7 @@
     /* Basic Options */
     "target": "ES2019" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', or 'ESNEXT'. */,
     "module": "CommonJS" /* Specify module code generation: 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
+    "ignoreDeprecations": "5.0" /* Suppress deprecation warnings for TypeScript 5.x */,
     "lib": [
       "ES2019"
     ]
