--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koatty",
   "version": "3.14.0-beta.1",
-  "description": "Koa2 + Typescript = koatty. Use Typescript's decorator implement auto injection.",
+  "description": "Koa + Typescript = koatty. Use Typescript's decorator implement auto injection.",
   "scripts": {
     "build": "npm run build:js && npm run build:dts && npm run build:doc && npm run build:cp && npm run build:fix",
     "build:cp": "node scripts/postBuild && npx copyfiles package.json LICENSE README.md dist/",
