--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,8 @@
     "noFallthroughCasesInSwitch": true /* Report errors for fallthrough cases in switch statement. */,
     /* Module Resolution Options */
     "moduleResolution": "bundler" /* Specify module resolution strategy for bundlers */,
+    "resolvePackageJsonExports": false /* Disable strict package.json exports resolution for compatibility */,
+    "skipLibCheck": true /* Skip type checking of declaration files */,
     // "baseUrl": "./",                       /* Base directory to resolve non-absolute module names. */
     // "paths": {},                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
