--- a/packages/koatty-core/package.json
+++ b/packages/koatty-core/package.json
@@ -4,7 +4,7 @@
   "description": "Koatty framework core",
   "scripts": {
     "build": "npm run build:js && npm run build:dts && npm run build:doc && npm run build:cp && npm run build:fix",
-    "build:cp": "node scripts/postBuild && npx copyfiles package.json LICENSE README.md dist/",
+    "build:cp": "npx copyfiles package.json LICENSE README.md dist/ && node scripts/postBuild",
     "build:fix": "node scripts/fixWorkspaceDeps",
     "build:js": "npx rollup --bundleConfigAsCjs -c .rollup.config.js",
     "build:doc": "npx api-documenter markdown --input temp --output docs/api",
