--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koatty",
-  "version": "3.14.0-beta.1",
+  "version": "4.0.0",
   "description": "Koa + Typescript = koatty. Use Typescript's decorator implement auto injection.",
   "scripts": {
     "build": "npm run build:js && npm run build:dts && npm run build:doc && npm run build:cp && npm run build:fix",
@@ -8,7 +8,7 @@
     "build:fix": "node scripts/fixWorkspaceDeps",
     "build:js": "npx rollup --bundleConfigAsCjs -c .rollup.config.js",
     "build:doc": "npx api-documenter markdown --input temp --output docs/api",
-    "build:dts": "npx tsc && npx api-extractor run --local --verbose",
+    "build:dts": "npx tsc --skipLibCheck && npx api-extractor run --local --verbose",
     "eslint": "eslint --ext .ts,.js ./",
     "prepublishOnly": "echo 'Skipping prepublishOnly in monorepo'",
     "prerelease": "npm test && npm run build",
