--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "koatty",
-  "version": "4.0.0",
+  "version": "4.0.3",
   "description": "Koa + Typescript = koatty. Use Typescript's decorator implement auto injection.",
   "scripts": {
     "build": "npm run build:js && npm run build:dts && npm run build:doc && npm run build:cp",
-    "build:cp": "npx copyfiles package.json LICENSE README.md dist/ && node scripts/postBuild",
+    "build:cp": "node scripts/copyFiles && node scripts/postBuild",
     "build:js": "npx rollup --bundleConfigAsCjs -c .rollup.config.js",
     "build:doc": "npx api-documenter markdown --input temp --output docs/api",
     "build:dts": "npx tsc --skipLibCheck && npx api-extractor run --local --verbose",
@@ -64,12 +64,13 @@
     "@types/ws": "^8.x.x",
     "@typescript-eslint/eslint-plugin": "^8.x.x",
     "@typescript-eslint/parser": "^8.x.x",
+    "copyfiles": "^2.x.x",
     "eslint": "^8.x.x",
     "eslint-plugin-jest": "^28.x.x",
     "husky": "^4.x.x",
     "jest": "^29.x.x",
     "jest-html-reporters": "^3.x.x",
-    "koatty_validation": "~1.x.x",
+    "koatty_validation": "^1.6.3",
     "reflect-metadata": "^0.x.x",
     "rollup": "^4.x.x",
     "rollup-plugin-delete": "^2.x.x",
@@ -83,12 +84,12 @@
   "dependencies": {
     "koa": "^3.0.3",
     "koatty_config": "workspace:*",
-    "koatty_container": "^1.17.0",
+    "koatty_container": "workspace:*",
     "koatty_core": "workspace:*",
     "koatty_exception": "workspace:*",
-    "koatty_lib": "^1.4.3",
-    "koatty_loader": "^1.3.0",
-    "koatty_logger": "2.8.1",
+    "koatty_lib": "workspace:*",
+    "koatty_loader": "workspace:*",
+    "koatty_logger": "workspace:*",
     "koatty_router": "workspace:*",
     "koatty_serve": "workspace:*",
     "koatty_trace": "workspace:*",
