feat: update dependencies to use workspace references and add example resources
Update package.json to use workspace references for koatty dependencies.
Add example resources including GraphQL schema, proto files, and test scripts.
Simplify logger API documentation.

--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "husky": "^4.x.x",
     "jest": "^29.x.x",
     "jest-html-reporters": "^3.x.x",
-    "koatty_validation": "^1.6.6",
+    "koatty_validation": "workspace:*",
     "reflect-metadata": "^0.x.x",
     "rollup": "^4.x.x",
     "rollup-plugin-delete": "^2.x.x",
@@ -83,16 +83,16 @@
   },
   "dependencies": {
     "koa": "^3.1.1",
-    "koatty_config": "^1.2.8",
-    "koatty_container": "^1.17.4",
-    "koatty_core": "^2.0.14",
-    "koatty_exception": "^2.0.10",
-    "koatty_lib": "^1.4.5",
-    "koatty_loader": "^1.1.4",
-    "koatty_logger": "^2.3.4",
-    "koatty_router": "^2.0.9",
-    "koatty_serve": "^3.0.7",
-    "koatty_trace": "^2.0.6",
+    "koatty_config": "workspace:*",
+    "koatty_container": "workspace:*",
+    "koatty_core": "workspace:*",
+    "koatty_exception": "workspace:*",
+    "koatty_lib": "workspace:*",
+    "koatty_loader": "workspace:*",
+    "koatty_logger": "workspace:*",
+    "koatty_router": "workspace:*",
+    "koatty_serve": "workspace:*",
+    "koatty_trace": "workspace:*",
     "ts-morph": "^27.0.2"
   }
 }
