--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/thinkkoa/koatty.git"
+    "url": "git+https://github.com/koatty/koatty.git"
   },
   "engines": {
     "node": ">=18.0.0"
@@ -34,9 +34,9 @@
   },
   "license": "BSD-3-Clause",
   "bugs": {
-    "url": "https://github.com/thinkkoa/koatty/issues"
+    "url": "https://github.com/koatty/koatty/issues"
   },
-  "homepage": "https://github.com/thinkkoa/koatty",
+  "homepage": "https://github.com/koatty/koatty",
   "maintainers": [
     {
       "name": "richenlin",
